@@ -28,7 +28,8 @@ include_once('./lib/poller.php');
 include_once('./lib/utility.php');
 
 $dq_actions = array(
-	1 => __('Delete')
+	1 => __('Delete'),
+	2 => __('Duplicate')
 );
 
 /* set default action */
@@ -358,7 +359,13 @@ function form_actions() {
 				for ($i=0;($i<cacti_count($selected_items));$i++) {
 					 data_query_remove($selected_items[$i]);
 				}
+			} elseif (get_nfilter_request_var('drp_action') == '2') { /* duplicate */
+				for ($i=0;($i<cacti_count($selected_items));$i++) {
+					 data_query_duplicate($selected_items[$i], get_nfilter_request_var('name_format'));
+				}
 			}
+		} else {
+			raise_message(40);
 		}
 
 		header('Location: data_queries.php?header=false');
@@ -395,17 +402,29 @@ function form_actions() {
 
 	if (isset($dq_array) && cacti_sizeof($dq_array)) {
 		if (get_nfilter_request_var('drp_action') == '1') { /* delete */
-			$graphs = array();
-
 			print "<tr>
 				<td class='textArea' class='odd'>
-					<p>" . __n('Click \'Continue\' to delete the following Data Query.', 'Click \'Continue\' to delete following Data Queries.', cacti_sizeof($dq_array)) . "</p>
+					<p>" . __n('Click \'Continue\' to Delete the following Data Query.', 'Click \'Continue\' to Delete following Data Queries.', cacti_sizeof($dq_array)) . "</p>
 					<div class='itemlist'><ul>$dq_list</ul></div>
 				</td>
-			</tr>\n";
-		}
+			</tr>";
 
-		$save_html = "<input type='button' class='ui-button ui-corner-all ui-widget' value='" . __esc('Cancel') . "' onClick='cactiReturnTo()'>&nbsp;<input type='submit' class='ui-button ui-corner-all ui-widget' value='" . __esc('Continue') . "' title='" . __n('Delete Data Query', 'Delete Data Query', cacti_sizeof($dq_array)) . "'>";
+			$save_html = "<input type='button' class='ui-button ui-corner-all ui-widget' value='" . __esc('Cancel') . "' onClick='cactiReturnTo()'>&nbsp;<input type='submit' class='ui-button ui-corner-all ui-widget' value='" . __esc('Continue') . "' title='" . __n('Delete Data Query', 'Delete Data Queries', cacti_sizeof($dq_array)) . "'>";
+		} elseif (get_nfilter_request_var('drp_action') == '2') { /* duplicatie */
+			print "<tr>
+				<td class='textArea' class='odd'>
+					<p>" . __n('Click \'Continue\' to duplicate the following Data Query.', 'Click \'Continue\' to duplicate following Data Queries.', cacti_sizeof($dq_array)) . "</p>
+					<div class='itemlist'><ul>$dq_list</ul></div>
+					<p><strong>" . __('Name Format:'). "</strong><br>";
+
+			form_text_box('name_format', '<dataquery_name> (1)', '', '255', '30', 'text');
+
+			print "</p>
+                </td>
+            </tr>";
+
+			$save_html = "<input type='button' class='ui-button ui-corner-all ui-widget' value='" . __esc('Cancel') . "' onClick='cactiReturnTo()'>&nbsp;<input type='submit' class='ui-button ui-corner-all ui-widget' value='" . __esc('Continue') . "' title='" . __n('Duplicate Data Query', 'Duplicate Data Queries', cacti_sizeof($dq_array)) . "'>";
+		}
 	} else {
 		raise_message(40);
 		header('Location: data_queries.php?header=false');
